# crc-rs

./: Cargo.toml
benches/: bench.rs
src/: crc128.rs  crc16.rs  crc32.rs  crc64.rs  crc8.rs  lib.rs
src/crc128/: bytewise.rs  default.rs  nolookup.rs  slice16.rs
src/crc16/: bytewise.rs  default.rs  nolookup.rs  slice16.rs
src/crc32/: bytewise.rs  default.rs  nolookup.rs  slice16.rs
src/crc64/: bytewise.rs  default.rs  nolookup.rs  slice16.rs
src/crc8/: bytewise.rs  default.rs  nolookup.rs  slice16.rs
tests/: crc.rs
