[package]
name = "crc"
version = "3.0.0"
authors = [
    "Rui Hu <code@mrhooray.com>",
    "Akhil Velagapudi <4@4khil.com>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mrhooray/crc-rs.git"
documentation = "https://docs.rs/crc"
description = "Rust implementation of CRC with support of various standards"
keywords = ["crc", "crc16", "crc32", "crc64", "hash"]
categories = ["algorithms", "no-std"]
edition = "2021"
rust-version = "1.56"

[dependencies]
crc-catalog = {git="https://github.com/dzamlo/crc-catalog.git"}

[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "bench"
harness = false
